@@ -1,3 +1,12 @@
+2007-05-09  Mark Rowe  <mrowe@apple.com>
+
+        Build fix.
+
+        * editing/Editor.cpp:
+        (WebCore::findFirstGrammarDetailInRange): Use unsigned rather than int.
+        (WebCore::findFirstBadGrammarInRange): Cast to unsigned in assertion.
+        (WebCore::isRangeUngrammatical): Remove unused variables.
+
 2007-05-08  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Darin.
